rewrite js code

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <div class="bx_todo_add clearfix">
             <input id="js_input_todo" class=" fl_l" placeholder="TODO Add" autofocus>
             <button id="js_add_todo" class=" fl_l">Add</button>
-            <p id="js_delete_all" class="btn btn_delete_all fl_r">Delete All</p>
+            <button id="js_delete_all" class="btn btn_delete_all fl_r">Delete All</button>
         </div>
         <ul id="js_todo_content" class="bx_todo_content"></ul>
         <script src="bower_components/jquery/jquery.js"></script>
