--- a/app/index.html
+++ b/app/index.html
@@ -20,16 +20,16 @@
             <button id="js_delete_all" class="btn btn_delete_all fl_r">Delete All</button>
         </div>
         <ul id="js_todo_content" class="bx_todo_content"></ul>
-        <script src="bower_components/jquery/jquery.js"></script>
-        <script src="scripts/lib/lodash.min.js"></script>
-        <script src="scripts/lib/backbone.js"></script>
     </div>
-    <!-- <script src="scripts/models/todo.js"></script>
+    <script src="bower_components/jquery/jquery.js"></script>
+    <script src="scripts/lib/lodash.min.js"></script>
+    <script src="scripts/lib/backbone.js"></script>
+    <script src="scripts/models/todo.js"></script>
     <script src="scripts/collections/todos.js"></script>
     <script src="scripts/views/todos.js"></script>
     <script src="scripts/views/app.js"></script>
     <script src="scripts/routers/router.js"></script>
-     -->
+
      <script src="scripts/app.js"></script>
 </body>
 </html>
