--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,9 @@
     <div class="l_wrapper">
         <h1>TODOS</h1>
         <div class="bx_todo_add clearfix">
-            <input id="js_input_todo" class=" fl_l" placeholder="TODO Add" autofocus>
-            <button id="js_add_todo" class=" fl_l">Add</button>
-            <button id="js_delete_all" class="btn btn_delete_all fl_r">Delete All</button>
+            <input id="js_input_todo" class="frm_todo_input" placeholder="TODO Add" autofocus>
+            <button id="js_add_todo" class="btn fl_r">Add</button>
+            <button id="js_delete_all" class="btn btn_delete_all fl_l">Delete All</button>
         </div>
         <ul id="js_todo_content" class="bx_todo_content"></ul>
     </div>
